# flowvis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yml
archive/: cubic.py  quintic.py  toy_sfps.py
docs/: _config.yml  _toc.yml  ess-bifurcation.ipynb  ess-intersection.ipynb  references.bib  sfp.md  stabilizing-sfp.ipynb
docs/_static/: custom.css
flow_policy/: flow_policy.py  plot.py  plot_deterministic.py  plot_stochastic.py  stochastic_flow_policy.py  traj.py
flow_policy/pusht/: dataset.py  diffusion_policy_state_pusht_demo.ipynb  dp_state_notebook.py  evaluate.py  sfp.py  sfp_ess.py  sfpd.py  sfps.py  utils.py
flow_policy/pusht/dp_state_notebook/: all.py  base_policy.py  dataset.py  diffusion_policy.py  diffusion_policy_state_pusht_demo.ipynb  env.py  network.py  rollout.py
flow_policy/pusht/experiments/dp_action/: test.ipynb  train.py
flow_policy/pusht/experiments/dp_obs/: test.ipynb  train.py
flow_policy/pusht/experiments/sfp_obs/: test.ipynb  train.py
flow_policy/pusht/experiments/sfpd_obs/: test.ipynb  train.py
flow_policy/pusht/experiments/sfps_obs/: test.ipynb  train.py
flow_policy/toy/: plot_deterministic.py  plot_stochastic.py  sfpd.py  sfps.py  stochastic_flow_policy.py
flow_policy/toy/notebooks/deterministic/: crossing-demos.ipynb  wine-glass-demos.ipynb
flow_policy/toy/notebooks/stochastic/: crossing-demos.ipynb  wine-glass-demos.ipynb
jupyviz/: __init__.py
notebooks/: crossing-demos.ipynb  idea.ipynb
notebooks/stochastic/: crossing-demos.ipynb  wine-glass-demos.ipynb
notebooks/toy/aspace/non-stabilizing/: crossing-demos.ipynb  wine-glass-demos.ipynb
notebooks/toy/latent/non-stabilizing/: crossing-demos.ipynb  wine-glass-demos.ipynb
streaming_flow_policy/: all.py
streaming_flow_policy/common/: utils.py
streaming_flow_policy/core/: flow_policy.py  sfp_aspace.py  sfp_base.py  sfp_cspace.py  sfp_latent.py  sfp_latent_bad.py  sfp_latent_base.py
streaming_flow_policy/franka/: extract_keypoints.py  keypoint_tracker.py  keypoint_utils.py
streaming_flow_policy/pusht/: dataset.py  evaluate.py  sfpd.py  sfps.py
streaming_flow_policy/pusht/dp_state_notebook/: all.py  dataset.py  diffusion_policy.py  diffusion_policy_state_pusht_demo.ipynb  dp_state_notebook.py  env.py  network.py  rollout.py
streaming_flow_policy/pusht/experiments/dp_action/: test.ipynb  train.py
streaming_flow_policy/pusht/experiments/dp_obs/: test.ipynb  train.py
streaming_flow_policy/pusht/experiments/sfpd_obs/: test.ipynb  train.py
streaming_flow_policy/pusht/experiments/sfps_obs/: test.ipynb  train.py
streaming_flow_policy/toy/: plot_aspace.py  plot_cspace.py  plot_deterministic.py  plot_latent.py  plot_stochastic.py  sfp_base.py  sfpd.py  sfps.py
streaming_flow_policy/toy/notebooks/deterministic/: crossing-demos.ipynb  wine-glass-demos.ipynb
streaming_flow_policy/toy/notebooks/stochastic/: wine-glass-demos.ipynb
utils/: __init__.py  timer.py
website/: index.html
website/media/real-world/: franka-1.webm  franka-2.webm
website/media/wineglass-det-stabilizing/: marginal-flow-and-samples.webm
website/notebooks/: .buildinfo  ess-bifurcation.html  ess-intersection.html  genindex.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  sfp.html  stabilizing-sfp.html
website/notebooks/_sources/: ess-bifurcation.ipynb  ess-intersection.ipynb  sfp.md  stabilizing-sfp.ipynb
website/thumbnail/ratio-2.25/: command-webm.txt  thumbnail-240p-172k.webm
website/thumbnail/ratio-original/: command-webm.txt  thumbnail-240p-88k.webm
(+26 files in other folders)
