[project]
name = "streaming-flow-policy"
version = "0.1.0"
description = ""
authors = [
    {name = "Siddharth Ancha", email = "sancha@mit.edu"},
    {name = "Sunshine Jiang", email = "sunsh16e@mit.edu"},
]
dependencies = [
    # =========================================================================
    # Debugging, interactive Python and Jupyter notebooks
    # =========================================================================
    "numpy < 2.0",
    "ipdb",
    "ipykernel",
    "ipywidgets",
    "pyreadline3",
    "tqdm",
    "jupyterlab",
    "jupyter-book",

    # =========================================================================
    # Main dependencies
    # =========================================================================
    "mediapy",
    
    "opencv-python",
    "drake",
    "matplotlib",
    "termcolor",
    "scipy",
    "scikit-image",
    "scikit-video",
    "torch",
    "torchvision",
    "torchdyn",
    "diffusers",
    "zarr",
    "numcodecs",
    "pygame",
    "pymunk",
    "gdown",
    "gym",
    "shapely",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["streaming_flow_policy", "jupyviz", "utils"]

[tool.setuptools.package-data]
exclude = [
    "website",
    "notebooks",
]
